# hpslam_SDK

./: README.D
HPslam_test/: CMakeLists.txt  CMakeLists.txt~  accelstatic.cpp~  configLeft.yaml~  configLeftLargeFOV.yaml~  configStereo.yaml  configStereo.yaml~  configStereo_双目1号.yaml~  testhpslam.cpp  testhpslam.cpp~
HPslam_test/Data/: Settings.yaml
HPslam_test/Sensor_Binocular/: CaptureData.cpp  CaptureData.h  main.cpp  main.cpp~  maker_binocular.cpp
HPslam_test/Sensor_Binocular/HPBPV1.0/: USB相机数据格HPBPV1.0.xlsx  双目相机USB命令格式v1.0.xlsx
HPslam_test/Sensor_Binocular/ca_stereo/bias/: imu_10.txt  imu_5.txt
HPslam_test/Sensor_Binocular/ca_stereo/camera+IMU/imu/: imu_16.txt  imu_17.txt  imu_23.txt  imu_26.txt  imu_28.txt  imu_9.txt
HPslam_test/Sensor_Binocular/ca_stereo/imu/: imu_1.txt  imu_11.txt  imu_12.txt  imu_13.txt  imu_14.txt  imu_18.txt  imu_19.txt  imu_2.txt  imu_4.txt  imu_8.txt  无标题文档 2~
HPslam_test/Sensor_Binocular/imu/: imu0.txt  imu1.txt  imu10.txt  imu2.txt  imu20~  imu5.txt  imu9.txt
HPslam_test/include/: Camera.hpp  Camera.hpp~  EKFSystem.hpp  EigenHelper.h  Feature.hpp  IMUFilter.hpp  IMUFilter.hpp~  MathHelper.h~  PangoViewer.hpp  System.hpp~  hpslam.hpp  hpslam.hpp~
HPslam_test/viewer/: Viewer.cc~  Viewer.h
Sensor_Binocular-HPBCV1.0.0/: CaptureData.cpp  CaptureData.h
Sensor_Binocular-HPBCV1.0.0/ca_stereo/bias/: data.txt  imu_1.txt  imu_2.txt  imu_4.txt  imu_7.txt
Sensor_Binocular-HPBCV1.0.0/ca_stereo/camera+IMU/imu/: imu_1.txt  imu_11.txt  imu_13.txt  imu_15.txt  imu_19.txt  imu_2.txt  imu_24.txt  imu_25.txt  imu_3.txt  imu_4.txt  imu_6.txt  imu_7.txt  imu_get.txt
Sensor_Binocular-HPBCV1.0.0/ca_stereo/imu/: imu_17.txt  imu_20.txt  imu_3.txt  imu_6.txt
Sensor_Binocular-HPBCV1.0.0/imu/: imu3.txt  imu8.txt
Sensor_calibration-HPBCV1.0.0_for_user/: CMakeLists.txt  CMakeLists.txt~  CaptureData.cpp  CaptureData.cpp~  MsgQueue.cpp  main.cpp
Sensor_calibration-HPBCV1.0.0_for_user/ca_stereo/bias/: imu_3.txt  imu_6.txt  imu_8.txt  imu_9.txt
Sensor_calibration-HPBCV1.0.0_for_user/ca_stereo/camera+IMU/imu/: imu_10.txt  imu_12.txt  imu_14.txt  imu_18.txt  imu_20.txt  imu_21.txt  imu_22.txt  imu_27.txt  imu_5.txt  imu_8.txt
Sensor_calibration-HPBCV1.0.0_for_user/ca_stereo/imu/: imu_10.txt  imu_15.txt  imu_16.txt  imu_5.txt  imu_7.txt  imu_9.txt  无标题文档~
Sensor_calibration-HPBCV1.0.0_for_user/imu/: imu4.txt  imu6.txt  imu7.txt  shiweizhi~
cyusb_linux_1.0.4/build-controlcenter-Desktop_Qt_5_5_1_GCC_32bit-Debug/: Makefile  ui_controlcenter.h
cyusb_linux_1.0.4/configs/: cyusb.conf
cyusb_linux_1.0.4/gui_src/: Makefile  Makefile_bak  controlcenter.cpp  controlcenter.pro  fx2_download.cpp  fx3_download.cpp  main.cpp  moc_controlcenter.cpp  ui_controlcenter.h
cyusb_linux_1.0.4/src/: 00_fwload  01_getdesc  03_getconfig  04_kerneldriver  05_claiminterface  06_setalternate  07_bulkwriter.c  08_cybulk  Makefile  config_parser  cyusbd  download_fx2  download_fx3  getconfig
